halloween-2025-last-day-fixes: refactor resource handling and inventory display